10/01/20. general idea is there. TODO: ensure that navigation bar and portfolio are aligned

--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,12 @@ span.portfolio-title{
     font-size: 1.5rem;
 }
 
+
 nav.vertical-menu {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 50%;
 }
 nav.vertical-menu a{
     text-decoration: none;
@@ -67,5 +69,15 @@ nav.vertical-menu a{
     padding: 1rem;
 }
 
+
+nav.center-picture{
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+}
+
+img.headshot-picture{
+    width: 15%;
+}
 
 
